--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -5,9 +5,11 @@
       <tr> <td>Before starting</td>  <td><a href="{{ site.dc_pre_survey }}{{ site.github.project_title }}" target="_blank">Pre-workshop survey</a></td> </tr>
       <tr> <td>9:30</td> <td> <a href="http://www.datacarpentry.org/spreadsheet-ecology-lesson/">Data organization in spreadsheets</a></td></tr>
       <tr> <td>10:30</td>  <td>Coffee</td> </tr>
+      <tr> <td>11:00</td> <td> <a href="http://www.datacarpentry.org/spreadsheet-ecology-lesson/">Data organization in spreadsheets cont.</a></td></tr>
       <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
       <tr> <td>13:00</td><td><a href="http://www.datacarpentry.org/R-ecology-lesson/">Introduction to R</a></td></tr>
       <tr> <td>14:30</td>  <td>Coffee</td> </tr>
+      <td>15:00</td><td><a href="http://www.datacarpentry.org/R-ecology-lesson/">Introduction to R cont.</a></td></tr>
       <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
       <tr> <td>16:30</td>  <td>END</td> </tr>          
     </table>
@@ -17,9 +19,11 @@
     <table class="table table-striped">
       <tr> <td>9:30</td> <td><a href="http://www.datacarpentry.org/R-ecology-lesson/">Continuation of R: data analysis & visualization</a></td></tr>
       <tr> <td>10:30</td>  <td>Coffee</td> </tr>
+       <tr> <td>11:00</td> <td><a href="http://www.datacarpentry.org/R-ecology-lesson/">Continuation of R: data analysis & visualization</a></td></tr>
       <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
       <tr> <td>13:00</td>  <td>Digital Lab Notebooks</td> </tr>
       <tr> <td>14:30</td>  <td>Coffee</td> </tr>
+      <tr> <td>15:00</td>  <td>Digital Lab Notebooks cont</td> </tr>
       <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
       <tr> <td>16:15</td>	<td><a href="{{ site.dc_post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop survey</a></td></tr>
       <tr> <td>16:30</td> <td> END </td></tr>
